src/views/snapshots/hn__views__comments__tests__comments_code_block.snap
---
source: src/views/comments.rs
expression: output
---
Code Block Test

┌Comments (1)──────────────────────────────────────────────────────────────────┐
│▶ [ ] coder · 1d ago                                                          │
│      Here is some code:                                                      │
│                                                                              │
│      fn main() {                                                             │
│          println!("hello");                                                  │
│      }                                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Comments  1/1 | l/h:expand  L/H:subtree  +/-:thread  p:parent  f:fav  Esc:back
