src/views/snapshots/hn__views__comments__tests__comments_view_collapsed_children_show_text.snap
---
source: src/views/comments.rs
expression: output
---
Nested Collapse Test

┌Comments (4)──────────────────────────────────────────────────────────────────┐
│▶ [-] parent · 1d ago · 2 replies                                             │
│   │  Parent comment expanded                                                 │
│   │                                                                          │
│   ├─ [ ] child_leaf · 1d ago                                                 │
│   │      Child with no replies                                               │
│   │                                                                          │
│   └─ [+] child_parent · 1d ago · 1 replies                                   │
│          Child with hidden grandchildren                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Comments  1/4 | l/h:expand  L/H:subtree  +/-:thread  p:parent  f:fav  Esc:back
