src/views/snapshots/hn__views__comments__tests__comments_view_depth_indentation.snap
---
source: src/views/comments.rs
expression: output
---
Deep Thread

┌Comments (4)──────────────────────────────────────────────────────────────────┐
│▶ [-] user1 · 1d ago · 1 replies                                              │
│   │  Top level comment                                                       │
│   │                                                                          │
│   └─ [-] user2 · 1d ago · 1 replies                                          │
│       │  First reply                                                         │
│       │                                                                      │
│       └─ [-] user3 · 1d ago · 1 replies                                      │
│           │  Nested reply                                                    │
│           │                                                                  │
│           └─ [ ] user4 · 1d ago                                              │
│                  Deep nested                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Comments  1/4 | l/h:expand  L/H:subtree  +/-:thread  Esc:back  ?:help
