src/views/snapshots/hn__views__comments__tests__comments_view_renders_thread.snap
---
source: src/views/comments.rs
expression: output
---
Test Story Title

┌Comments (5)──────────────────────────────────────────────────────────────────┐
│▶ [-] commenter1 · 1d ago · 2 replies                                         │
│   │  This is a great project! I love the vim keybindings.                    │
│   │                                                                          │
│   ├─ [+] commenter2 · 1d ago · 1 replies                                     │
│   │      Agreed, the vim bindings are really nice. Would love to see more    │
│   │      themes.                                                             │
│   │                                                                          │
│   └─ [ ] windowsuser · 1d ago                                                │
│          Does this work on Windows?                                          │
│                                                                              │
│  [ ] searcher · 1d ago                                                       │
│      Nice work! Any plans for search functionality?                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Comments  1/5 | l/h:expand/collapse  +/-:all  Esc:back  ?:help
