src/views/snapshots/hn__views__comments__tests__comments_view_top_level_collapsed_no_connectors.snap
---
source: src/views/comments.rs
expression: output
---
Multiple Top-Level

┌Comments (3)──────────────────────────────────────────────────────────────────┐
│▶ [+] alice · 1d ago · 1 replies                                              │
│      First top-level comment                                                 │
│                                                                              │
│  [+] bob · 1d ago · 1 replies                                                │
│      Second top-level comment                                                │
│                                                                              │
│  [ ] carol · 1d ago                                                          │
│      Third top-level comment                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Comments  1/3 | l/h:expand  L/H:subtree  +/-:thread  Esc:back  ?:help
