src/views/snapshots/hn__views__comments__tests__text_wrap_collapsed.snap
---
source: src/views/comments.rs
expression: collapsed_output
---
Wrap Test

┌Comments (2)──────────────────────────────────────────────────────────────────┐
│▶ [+] alice · 1d ago · 1 replies                                              │
│      This is a long comment that needs to wrap. It should wrap at exactly the│
│      same position whether the comment is collapsed or expanded because the  │
│      tree glyphs and spaces have identical display widths.                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Comments  1/2 | l/h:expand  L/H:subtree  +/-:thread  p:parent  f:fav  Esc:back
